prodMetadata/src/objects/Registered_Device__c.object
<CustomObject>
    <description>This custom Salesforce object will be used to store information pertaining to mobile devices.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to indicate whether the device is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Version__c</fullName>
        <description>This field will be used to store the App Version.</description>
        <label>App Version</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Id__c</fullName>
        <description>The Device Unique Id</description>
        <externalId>true</externalId>
        <inlineHelpText>The Device Unique Id</inlineHelpText>
        <label>Device Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Device_Model__c</fullName>
        <description>This field will be used to store the Device Model.</description>
        <label>Device Model</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_OS__c</fullName>
        <description>This field will be used to store the Device OS.</description>
        <label>Device OS</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to store the ID of the Contact to whom this device belongs.</description>
        <label>Device Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registered Devices</relationshipLabel>
        <relationshipName>Registered_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Token__c</fullName>
        <description>This field will be used to store the Device Token.  It should be configured as an External ID field that is unique across all records.</description>
        <label>Device Token</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Latitude__c</fullName>
        <description>This field will be used to store the Last Latitude that was searched for by this device.</description>
        <inlineHelpText>This field will be used to store the Last Latitude that was searched for by this device.</inlineHelpText>
        <label>Last Latitude</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Longitude__c</fullName>
        <description>This field will be used to store the Last Longitude that was searched for by this device.</description>
        <inlineHelpText>This field will be used to store the Last Longitude that was searched for by this device.</inlineHelpText>
        <label>Last Longitude</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Search_By__c</fullName>
        <description>This field will be used to indicate how the last search was done by the device.  The valid values are: ‘Latitude and Longitude’, ‘Zip Code’.  This field may be null if the device has just been registered and no searches have yet been performed OR if the last search was generic and did not use Zip Code or Latitude and Longitude.</description>
        <inlineHelpText>This field will be used to indicate how the last search was done by the device.</inlineHelpText>
        <label>Last Search By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latitude and Longitude</fullName>
                </value>
                <value>
                    <fullName>Zip Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Search_On__c</fullName>
        <description>This field will be used to indicate the timestamp for when the last search was performed by the device.</description>
        <inlineHelpText>This field will be used to indicate the timestamp for when the last search was performed by the device.</inlineHelpText>
        <label>Last Search On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Zip_Code__c</fullName>
        <description>This field will be used to store the Last Zip Code that was searched for by this device.</description>
        <inlineHelpText>This field will be used to store the Last Zip Code that was searched for by this device.</inlineHelpText>
        <label>Last Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Rewards__c</fullName>
        <description>This field will be used to store the number of new rewards that have been created near the owner’s location since they last searched for rewards.</description>
        <label>New Rewards</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receive_Messages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This filed will be used to indicate whether the device accepts messages or not.</description>
        <label>Receive Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Timestamp__c</fullName>
        <description>The timestamp when the device was last registered.</description>
        <label>Registration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Registered Device</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>App_Version__c</columns>
        <columns>Device_Model__c</columns>
        <columns>Device_OS__c</columns>
        <columns>Device_Owner__c</columns>
        <columns>Device_Token__c</columns>
        <columns>Device_Id__c</columns>
        <columns>Receive_Messages__c</columns>
        <columns>Registration_Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Registered Device Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registered Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Device_Id_Length</fullName>
        <active>true</active>
        <description>Device Id must contains 40 characters.</description>
        <errorConditionFormula>LEN( Device_Id__c )  &lt;&gt; 40</errorConditionFormula>
        <errorDisplayField>Device_Id__c</errorDisplayField>
        <errorMessage>Device Id has to be 40 characters long.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Device_Token_Validation</fullName>
        <active>true</active>
        <description>The Device Token could be empty or a 64 chars hexadecimal number.</description>
        <errorConditionFormula>AND(  NOT(ISBLANK( Device_Token__c )), NOT(REGEX( Device_Token__c , &apos;[0-9a-fA-F]{64}&apos;) ))</errorConditionFormula>
        <errorDisplayField>Device_Token__c</errorDisplayField>
        <errorMessage>The Device Token can be empty or an hexadecimal number (0-9a-f) of 64 characters.</errorMessage>
    </validationRules>
</CustomObject>